# sps-2014-12-4

./: AUTHORS  ChangeLog  HACKING.rst  MANIFEST.in  PKG-INFO  README.md  install.sh  openstack-common.conf  run_tests.sh  setup.cfg  tox.ini
doc/source/: authentication.rst  cache.rst  common-image-properties.rst  conf.py  configuring.rst  controllingservers.rst  db.rst  formats.rst  glanceapi.rst  glanceclient.rst  identifiers.rst  index.rst  installing.rst  notifications.rst  policies.rst  property-protections.rst  statuses.rst
doc/source/man/: footer.rst  glanceapi.rst  glancecachecleaner.rst  glancecachemanage.rst  glancecacheprefetcher.rst  glancecachepruner.rst  glancecontrol.rst  glancemanage.rst  glanceregistry.rst  glancereplicator.rst  glancescrubber.rst
etc/: logging.cnf.sample  policy.json  property-protections-policies.conf.sample  property-protections-roles.conf.sample  sps-api-paste.ini  sps-api.conf
sps/: context.py  notifier.py  version.py
sps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sps/api/: common.py  policy.py  versions.py
sps/api/middleware/: context.py  version_negotiation.py
sps/api/v1/: controller.py  demos.py  router.py
sps/cmd/: __init__.py  api.py  manage.py
sps/common/: auth.py  client.py  config.py  exception.py  property_utils.py  rpc.py  utils.py  wsgi.py
sps/db/: __init__.py  migration.py
sps/db/sqlalchemy/: api.py  models.py
sps/locale/: glance.pot
sps/openstack/common/: excutils.py  log.py  (+8 more)
sps/tests/: stubs.py  test_hacking.py  utils.py
tools/: install_venv.py  migrate_image_owners.py
(+37 files in other folders)
