[metadata]
name = sps
version = 2014.2
summary = OpenStack Image Service
description-file = 
	README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[entry_points]
console_scripts = 
	sps-api = sps.cmd.api:main
	sps-manage = sps.cmd.manage:main

sps.common.image_location_strategy.modules =
	location_order_strategy = sps.common.location_strategy.location_order
	store_type_strategy = sps.common.location_strategy.store_type

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = sps/locale
domain = sps

[update_catalog]
domain = sps
output_dir = sps/locale
input_file = sps/locale/sps.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sps/locale/sps.pot

